docs/debug/tactical-core-patcher.log
file:///home/runner/work/Real-wargame/Real-wargame/.github/patches/apply-tactical-core-v2.mjs:241
  `    \`kind:${value.kind}\`,\n    \`origin:${quantize(value.origin.x)}:${quantize(value.origin.y)}\`,\n    \`posture:${value.currentPosture}\`,\n    \`order:${value.orderTarget ? \`${quantize(value.orderTarget.x)}:${quantize(value.orderTarget.y)}\` : 'none'}\`,\n    \`threats:${value.threatCount}:${value.tacticalKnowledgeRevision}\`,`,
                                                                                                                                                                                     ^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:110:18)
    at #translate (node:internal/modules/esm/loader:559:20)
    at afterLoad (node:internal/modules/esm/loader:612:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:617:12)
    at #createModuleJob (node:internal/modules/esm/loader:640:36)
    at #getJobFromResolveResult (node:internal/modules/esm/loader:353:34)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:321:41)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:680:25)

Node.js v22.23.1
